[package]
name = "gps_correct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.1"
bytes = "1.5.0"
pin-project-lite = "0.2.13"
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.3" }


